--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                   </div>
                </div>
             </div>
-            <div class="bottom-header">
-               <div class="container d-flex justify-content-between align-items-center">
+            <div class="bottom-header p-0">
+               <div class="container d-none d-lg-flex justify-content-between align-items-center">
                   <div class="site-identity">
                      <h1 class="site-title">
                         <a href="index.html">
@@ -98,7 +98,7 @@
                               <a class="nav-link dropdown-toggle" href="service.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" style="color:black" aria-expanded="false">
                                 Our Services
                               </a>
-                              <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
+                              <ul class="dropdown-menu col-sm-11  ml-sm-3 mr-sm-3 " aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item " href="information-security-consultancy.html">Information Security <br> Consultancy </a></li>
                                 <li><a class="dropdown-item " href="vulnerability-assessment-penetration-testing-vapt.html">Vulnerability Assessment & <br>  Penetration Testing (VAPT)</a></li>
                               </ul>
@@ -107,7 +107,7 @@
                               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" style="color:#000" aria-expanded="false">
                                 Our Products
                               </a>
-                              <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
+                              <ul class="dropdown-menu col-sm-11  ml-sm-3 mr-sm-3 border-3" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item " href="#">Endpoint</a></li>
                                 <li><a class="dropdown-item " href="#">Cloud Products</a></li>
                                 <li><a class="dropdown-item " href="#">Network Products</a></li>
@@ -131,7 +131,9 @@
                   </div>
                </div>
             </div>
-            <div class="mobile-menu-container " ></div>
+            <div class="mobile-menu-container mt-0  position-stickey  " >
+               <img src="/assets/images/logo-footer.png" class="d-block d-lg-none" style="height: 30px; position:absolute; top: 6px; "  alt="">
+            </div>
          </header>
 
          <main id="content" class="site-main ">
