--- a/information-security-consultancy.html
+++ b/information-security-consultancy.html
@@ -49,8 +49,8 @@
                </div>
             </div>
          </div>
-         <div class="bottom-header">
-            <div class="container d-flex justify-content-between align-items-center">
+         <div class="bottom-header p-0">
+            <div class="container  d-none d-lg-flexjustify-content-between align-items-center">
                <div class="site-identity">
                   <h1 class="site-title">
                      <a href="index.html">
@@ -109,7 +109,9 @@
                </div>
             </div>
          </div>
-         <div class="mobile-menu-container"></div>
+         <div class="mobile-menu-container mt-0  position-stickey  " >
+            <img src="/assets/images/logo-footer.png" class="d-block d-lg-none" style="height: 30px; position:absolute; top: 6px; "  alt="">
+         </div>
       </header>
 
       <main id="content" class="site-main">
