--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
                            </li>
             
                            <li class="nav-item dropdown">
-                              <a class="nav-link dropdown-toggle" href="service.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" style="color:black" aria-expanded="false">
+                              <a class="nav-link dropdown-toggle" href="service.html" id="navbarDropdown" role="button" style="color:black" aria-expanded="false">
                                 Our Services
                               </a>
-                              <ul class="dropdown-menu col-sm-11  ml-sm-3 mr-sm-3 " aria-labelledby="navbarDropdown">
+                              <ul class="dropdown-menu ml-sm-3 mr-sm-3 " aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item " href="information-security-consultancy.html">Information Security <br> Consultancy </a></li>
                                 <li><a class="dropdown-item " href="vulnerability-assessment-penetration-testing-vapt.html">Vulnerability Assessment & <br>  Penetration Testing (VAPT)</a></li>
                               </ul>
                             </li>                       
                            <li class="nav-item dropdown">
-                              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" style="color:#000" aria-expanded="false">
+                              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" style="color:#000" aria-expanded="false">
                                 Our Products
                               </a>
-                              <ul class="dropdown-menu col-sm-11  ml-sm-3 mr-sm-3 border-3" aria-labelledby="navbarDropdown">
+                              <ul class="dropdown-menu  ml-sm-3 mr-sm-3 border-3" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item " href="#">Endpoint</a></li>
                                 <li><a class="dropdown-item " href="#">Cloud Products</a></li>
                                 <li><a class="dropdown-item " href="#">Network Products</a></li>
