--- a/service.html
+++ b/service.html
@@ -32,7 +32,7 @@
       rel="stylesheet">
    <!-- Custom CSS -->
    <link rel="stylesheet" type="text/css" href="style.css">
-   <title>Global Flight Fare </title>
+   <title>IQBOX </title>
 </head>
 
 <body>
